--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
       "name": "2020 7b test 1",
       "type": "go",
@@ -75,7 +76,44 @@
       "program": "${fileDirname}",
       "env": {},
       "args": ["11b", "input/11"]
+    },
+    {
+      "name": "2020 14a test",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "env": {},
+      "args": ["14a", "testdata/14_1"]
+    },
+    {
+      "name": "2020 14a real",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "env": {},
+      "args": ["14a", "input/14"]
+    },
+    {
+      "name": "2020 14b test",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "env": {},
+      "args": ["14b", "testdata/14_3"]
+    },
+    {
+      "name": "2020 14b real",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "env": {},
+      "args": ["14b", "input/14"]
     }
+
 
 
   ]
