--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -139,9 +139,16 @@
       "program": "${fileDirname}",
       "env": {},
       "args": ["15b", "input/15"]
+    },
+    {
+      "name": "2020 16 real",
+      "type": "go",
+      "request": "launch",
+      "mode": "auto",
+      "program": "${fileDirname}",
+      "env": {},
+      "args": ["16a", "input/16"]
     }
-
-
 
   ]
 }
