--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 colored = "2.0.0"
 regex = "1.7.0"
+serde = { version = "1.0.150", features = ["derive"] }
+serde_json = "1.0.89"
 sscanf = "0.4.0"
